Merge with content refactoring branch. Please see B2007-09-10_Contents_Refactorization for complete commit history.