@@ -8,7 +8,12 @@ import net.sourceforge.fenixedu.applicationTier.Servico.exceptions.FenixServiceE
 import net.sourceforge.fenixedu.dataTransferObject.SearchDSpaceBean;
 import net.sourceforge.fenixedu.dataTransferObject.SearchDSpacePublicationBean;
 import net.sourceforge.fenixedu.dataTransferObject.SearchDSpaceBean.SearchElement;
+import net.sourceforge.fenixedu.domain.RootDomainObject;
 import net.sourceforge.fenixedu.domain.Site;
+import net.sourceforge.fenixedu.domain.contents.Container;
+import net.sourceforge.fenixedu.domain.functionalities.AbstractFunctionalityContext;
+import net.sourceforge.fenixedu.domain.functionalities.FunctionalityContext;
+import net.sourceforge.fenixedu.domain.homepage.Homepage;
 import net.sourceforge.fenixedu.presentationTier.Action.research.result.publication.SearchPublicationsAction;
 
 import org.apache.struts.action.ActionForm;
@@ -45,8 +50,17 @@ public class SearchPublicationsDA extends SearchPublicationsAction {
     }
 
     protected void setRequestDomainObject(HttpServletRequest request) {
-	String siteID = request.getParameter("siteID");
-	Site site = rootDomainObject.readSiteByOID(new Integer(siteID));
+	
+	
+	FunctionalityContext context = AbstractFunctionalityContext.getCurrentContext(request);
+	Site site = null;
+	if (context != null) {
+	    site = (Site) context.getLastContentInPath(Homepage.class);
+	}
+	else {
+	    String siteID = request.getParameter("siteID");
+	    site = (Site) RootDomainObject.getInstance().readContentByOID(Integer.valueOf(siteID));
+	}
 	request.setAttribute("site", site);
     }
 
